--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-streamlit>=1.19.0,<2.0
-requests>=2.25.1
-Pillow>=8.0.0,<10.0
-rich==14.0.0
-markdown-it-py==3.0.0
-mdurl==0.1.2
-pygments==2.19.1
+streamlit                         1.37.1
+requests                          2.32.3
+requests-file                     1.5.1
+requests-toolbelt                 1.0.0
+pillow                            10.4.0
+rich                              13.7.1
+docstring-to-markdown             0.11
+mdurl                             0.1.0
+Pygments                          2.15.1
