--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 streamlit>=1.19.0,<1.25.0
 requests>=2.25.1,<3.0.0
-pillow>=8.0.0,<10.0
+pillow==9.5.0
 rich>=13.0.0,<14.0.0
 docstring-to-markdown>=0.11
 mdurl>=0.1.0
 pygments>=2.10.0,<3.0.0
+
 
