--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,5 @@
-streamlit==1.25.0
-requests==2.31.0
+streamlit
+requests
 pillow==9.5.0
-rich==13.7.1
-docstring-to-markdown==0.11
-mdurl==0.1.0
-pygments==2.15.1
-
 
 
